--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -32,8 +32,13 @@ jobs:
         run: python crawler.py
 
       - name: Commit and push if changed
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add output/
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Auto-update: latest official notices $(date +'%Y-%m-%d %H:%M:%S')" && git push)
+  run: |
+    git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+    git config --local user.name "github-actions[bot]"
+    git add output/
+    git status --porcelain > /dev/null
+    if [ $? -ne 0 ]; then
+      echo "No changes to commit."
+      exit 0
+    fi
+    git commit -m "Auto-update: latest official notices $(date +'%Y-%m-%d %H:%M:%S')" && git push || echo "Nothing to commit or push."
